crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_class-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Class {
        target: Path {
            segments: [
                Segment {
                    ident: "Foo",
                    generic_args: [],
                },
                Segment {
                    ident: "Bar",
                    generic_args: [],
                },
            ],
        },
        fields: [
            (
                "a",
                Int {
                    value: 0,
                },
            ),
        ],
    },
)
