crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_class-9.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Class(
        Class {
            target: Path {
                segments: [
                    Segment {
                        ident: "Foo",
                        generic_args: [],
                    },
                    Segment {
                        ident: "Bar",
                        generic_args: [],
                    },
                ],
            },
            fields: [
                (
                    "a",
                    Literal(
                        Int(
                            Int {
                                value: 0,
                            },
                        ),
                    ),
                ),
                (
                    "b",
                    Literal(
                        Int(
                            Int {
                                value: 1,
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
