crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_ctrl-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Return(
    Some(
        Int {
            value: 10,
        },
    ),
)
