crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_ctrl-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Throw(
    Some(
        Int {
            value: 10,
        },
    ),
)
