crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_ctrl-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Ctrl(
        Continue,
    ),
)
